unpackaged/main/default/objects/ETIN_Employee_Family__c/ETIN_Employee_Family__c.object-meta.xml
<CustomObject>
    <description>This object is created to hold the employee family details related to Insurance app</description>
    <label>Employee Family</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Family</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>