unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT( ISBLANK( Date_Of_Birth__c) ) ,
  IF( DATE( 2000 , MONTH( Date_Of_Birth__c) , DAY( Date_Of_Birth__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Date_Of_Birth__c),
     YEAR (Today()) - YEAR ( Date_Of_Birth__c) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>