unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Arabic_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arabic Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>