unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/EID_Application_No__c.field-meta.xml
<CustomField>
    <fullName>EID_Application_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Application No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>