unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>