unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee Family</relationshipLabel>
    <relationshipName>Employee_Family</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>