unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>