unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Place_of_Visa_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Visa_Issuance__c</fullName>
    <label>Place of Visa Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAE_Emirates</valueSetName>
    </valueSet>
</CustomField>