unpackaged/main/default/objects/ETIN_Employee_Family__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>