unpackaged/main/default/objects/ETIN_Employee_Family__c/validationRules/Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &gt;= 18 &amp;&amp;   ISPICKVAL(Relation__c , &#39;Child&#39;) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Child age should be less than 18 years.</errorMessage>
</ValidationRule>