unpackaged/main/default/objects/ETIN_Employee_Family__c/validationRules/EID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EID_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Emirates_ID__c )),
NOT(REGEX(Emirates_ID__c ,&quot;([784-]{4}[0-9-]{5}[0-9-]{8}[0-9]{1})&quot;))
)</errorConditionFormula>
    <errorDisplayField>Emirates_ID__c</errorDisplayField>
    <errorMessage>Please enter Emirates Id in correct format (784-XXXX-XXXXXXX-X)</errorMessage>
</ValidationRule>