unpackaged/main/default/objects/ETIN_Employee_Family__c/validationRules/Female_Employee_Family_Restrication.validationRule-meta.xml
<ValidationRule>
    <fullName>Female_Employee_Family_Restrication</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Employee__r.ETST_Gender__c,&#39;Female&#39;) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>Female employees are not eligible for family insurance</errorMessage>
</ValidationRule>